--- a/tools/KSPBurst.version.in
+++ b/tools/KSPBurst.version.in
@@ -4,7 +4,7 @@
   "URL"      : "https://raw.githubusercontent.com/KSPModdingLibs/KSPBurst/master/GameData/000_KSPBurst/KSPBurst.version",
   "GITHUB" : {
     "USERNAME"   : "KSPModdingLibs",
-    "REPOSITORY" : "KSPBurst",
+    "REPOSITORY" : "KSPBurst"
   },
   "VERSION" : {
     "MAJOR" : $(VersionMajor),
