WIP: update burst to 1.7.4

--- a/GameData/000_KSPBurst/KSPBurst.cfg
+++ b/GameData/000_KSPBurst/KSPBurst.cfg
@@ -1,6 +1,6 @@
 KSPBurst
 {
-    backend = burst-llvm-11
+    backend = burst-llvm-12
     safety-checks = false
     disable-opt = false
     fastmath = false
@@ -49,8 +49,8 @@ KSPBurst
     only-list-methods = false
     // pdb-search-paths =
 
-    compilation-defines = UNITY_2019_2_2
-    compilation-defines = UNITY_2019_2
+    compilation-defines = UNITY_2019_4_18
+    compilation-defines = UNITY_2019_4
     compilation-defines = UNITY_2019
     compilation-defines = UNITY_5_3_OR_NEWER
     compilation-defines = UNITY_5_4_OR_NEWER
@@ -66,6 +66,8 @@ KSPBurst
     compilation-defines = UNITY_2018_4_OR_NEWER
     compilation-defines = UNITY_2019_1_OR_NEWER
     compilation-defines = UNITY_2019_2_OR_NEWER
+    compilation-defines = UNITY_2019_3_OR_NEWER
+    compilation-defines = UNITY_2019_4_OR_NEWER
     compilation-defines = PLATFORM_ARCH_64
     compilation-defines = UNITY_64
     compilation-defines = UNITY_INCLUDE_TESTS
@@ -123,7 +125,7 @@ KSPBurst
     compilation-defines = ENABLE_AR
     compilation-defines = ENABLE_WEBSOCKET_HOST
     compilation-defines = ENABLE_MONO
-    compilation-defines = NET_4_6
+    compilation-defines = NET_4_8
     compilation-defines = UNITY_PRO_LICENSE
     compilation-defines = ENABLE_CUSTOM_RENDER_TEXTURE
     compilation-defines = ENABLE_DIRECTOR
